fix: adjust h4 and h5 line height and quadrant spacing

--- a/src/assets/styles/all.css
+++ b/src/assets/styles/all.css
@@ -673,7 +673,7 @@ a:visited {
 }
 
 .card + .card {
-    margin-top: var(--fi-space-l);
+    margin-top: 1rem;
 }
 
 .center {
