--- a/src/assets/styles/print.css
+++ b/src/assets/styles/print.css
@@ -70,10 +70,12 @@ blockquote {
 
 h4 {
     font-size: var(--step-2);
+    line-height: 1.4;
 }
 
 h5 {
     font-size: var(--step-1);
+    line-height: 1.4;
 }
 
 h6 {
